backend/k8s/clusters/local/apps/identity-service/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: identity-service
  namespace: identity-domain
spec:
  entryPoints: [web]
  routes:
    - match: PathPrefix(`/v1/public`)
      kind: Rule
      services:
        - name: identity-service
          port: 50051
          scheme: h2c
    - match: PathPrefix(`/v1/identity`)
      kind: Rule
      middlewares:
        - name: jwt-forward-auth
          namespace: traefik
      services:
        - name: identity-service
          port: 50051
          scheme: h2c
